# supersnabb

./: .gitignore  Jenkinsfile  pyproject.toml  requirements.txt
boopy.egg-info/: PKG-INFO  requires.txt
notebooks/: adjust_advance.ipynb  datetime_test.ipynb  enum_test.ipynb  exchange.ipynb  fixedleg.ipynb  floatingleg.ipynb  isinarrears.ipynb  mixed_interpolation.ipynb  rateslib.ipynb  schedule.ipynb  sort_dicts_rateslib.ipynb  termstructure.ipynb
supersnabb/: __init__.py
supersnabb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
supersnabb/cashflows/: coupon.py  fixed_rate_coupon.py  float_rate_coupon.py
supersnabb/indices/: ibor_index.py  interest_rate_index.py
supersnabb/instruments/: instrument.py  swap.py  vanilla_swap.py
supersnabb/termstructure/: curve.py  interpolation.py
supersnabb/time/: business_day_convention.py  calendar.py  date.py  daycounter.py  schedule.py
supersnabb/time/calendar/: calendar.py  null_calendar.py  nullcalendar.py  sweden.py
supersnabb/time/calendars/: null_calendar.py  sweden.py
supersnabb/time/daycounters/: act360.py  act365.py
tests/time/: test_date.py  test_schedule.py
tests/time/calendar/: test_null.py  test_sweden.py
